leopard an little bustard

--- a/src/main/resources/assets/faunanatural/lang/es_es.lang
+++ b/src/main/resources/assets/faunanatural/lang/es_es.lang
@@ -1,5 +1,9 @@
 entity.atlantic_puffin.name=Frailecillo atlantico
 entity.cream-coloured_courser.name=Corredor sahariano
-entity.avocet.name=Avoceta comun
+entity.avocet.name=Avoceta común
 entity.spotted_hyena.name=Hiena moteada
-entity.cantabric_capercaillie.name=Urogallo cantabrico
+entity.cantabric_capercaillie.name=Urogallo cantábrico
+entity.camel.name=Camello bactriano
+entity.grey_seal.name=Foca gris
+entity.little_bustard.name=Sisón común
+entity.leopard.name=Leopardo
