--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -2,4 +2,8 @@ entity.atlantic_puffin.name=Atlantic puffin
 entity.cream-coloured_courser.name=Cream-coloured courser
 entity.avocet.name=Common avocet
 entity.spotted_hyena.name=Spotted hiena
-entity.cantabric_capercaillie.name=Western capercaillie
+entity.cantabric_capercaillie.name=Cantabrian capercaillie
+entity.camel.name=Bactrian camel
+entity.grey_seal.name=Grey seal
+entity.little_bustard.name=Little bustard
+entity.leopard.name=Leopard
