--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -1,5 +1,9 @@
-entity.atlantic_puffin.name=Frailecillo atlantico
-entity.cream-coloured_courser.name=Corredor sahariano
-entity.avocet.name=Avoceta comun
-entity.spotted_hyena.name=Hiena moteada
-entity.cantabric_capercaillie.name=Urogallo cantabrico
+entity.atlantic_puffin.name=Macareux moine
+entity.cream-coloured_courser.name=Courvite isabelle
+entity.avocet.name=Avocette élégante
+entity.spotted_hyena.name=Hyène tachetée
+entity.cantabric_capercaillie.name=Grand tétras
+entity.camel.name=Chameau de bactriane
+entity.grey_seal.name=Phoque moine
+entity.little_bustard.name=Outarde canepetière
+entity.leopard.name=Leopard
