--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -6,4 +6,5 @@ entity.cantabric_capercaillie.name=Cantabrian capercaillie
 entity.camel.name=Bactrian camel
 entity.grey_seal.name=Grey seal
 entity.little_bustard.name=Little bustard
-entity.leopard.name=Leopard
+entity.leopard.name=African leopard
+entity.barbary_lion.name=Barbary lion
