--- a/src/main/resources/assets/faunanatural/lang/es_es.lang
+++ b/src/main/resources/assets/faunanatural/lang/es_es.lang
@@ -6,4 +6,5 @@ entity.cantabric_capercaillie.name=Urogallo cantábrico
 entity.camel.name=Camello bactriano
 entity.grey_seal.name=Foca gris
 entity.little_bustard.name=Sisón común
-entity.leopard.name=Leopardo
+entity.leopard.name=Leopardo africano
+entity.barbary_lion.name=León del Atlas
