--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -6,4 +6,5 @@ entity.cantabric_capercaillie.name=Grand tétras
 entity.camel.name=Chameau de bactriane
 entity.grey_seal.name=Phoque moine
 entity.little_bustard.name=Outarde canepetière
-entity.leopard.name=Leopard
+entity.leopard.name=Léopard Africain
+entity.barbary_lion.name=León del Atlas
