--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -8,3 +8,4 @@ entity.grey_seal.name=Grey seal
 entity.little_bustard.name=Little bustard
 entity.leopard.name=African leopard
 entity.barbary_lion.name=Barbary lion
+entity.grants_gazelle.name=Grant´s gazelle
