--- a/src/main/resources/assets/faunanatural/lang/es_es.lang
+++ b/src/main/resources/assets/faunanatural/lang/es_es.lang
@@ -8,3 +8,4 @@ entity.grey_seal.name=Foca gris
 entity.little_bustard.name=Sisón común
 entity.leopard.name=Leopardo africano
 entity.barbary_lion.name=León del Atlas
+entity.grants_gazelle.name=Gacela de Grant
