--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -8,3 +8,4 @@ entity.grey_seal.name=Phoque moine
 entity.little_bustard.name=Outarde canepetière
 entity.leopard.name=Léopard Africain
 entity.barbary_lion.name=León del Atlas
+entity.grants_gazelle.name=Grant´s gazelle
