--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -9,3 +9,4 @@ entity.little_bustard.name=Little bustard
 entity.leopard.name=African leopard
 entity.barbary_lion.name=Barbary lion
 entity.grants_gazelle.name=Grant´s gazelle
+entity.jack_fish.name=Jack Fish
