--- a/src/main/resources/assets/faunanatural/lang/es_es.lang
+++ b/src/main/resources/assets/faunanatural/lang/es_es.lang
@@ -9,3 +9,4 @@ entity.little_bustard.name=Sisón común
 entity.leopard.name=Leopardo africano
 entity.barbary_lion.name=León del Atlas
 entity.grants_gazelle.name=Gacela de Grant
+entity.jack_fish.name=Jurel común
