--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -7,5 +7,6 @@ entity.camel.name=Chameau de bactriane
 entity.grey_seal.name=Phoque moine
 entity.little_bustard.name=Outarde canepetière
 entity.leopard.name=Léopard Africain
-entity.barbary_lion.name=León del Atlas
-entity.grants_gazelle.name=Grant´s gazelle
+entity.barbary_lion.name=Lion de l'atlas
+entity.grants_gazelle.name=Gazelle de grant
+entity.jack_fish.name=Carangue
