--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -10,3 +10,11 @@ entity.leopard.name=African leopard
 entity.barbary_lion.name=Barbary lion
 entity.grants_gazelle.name=Grant´s gazelle
 entity.jack_fish.name=Jack Fish
+entity.nautilus.name=Nautilus
+entity.puma.name=Puma
+entity.blue_gnu.name=Blue gnu
+entity.kori_bustard.name=Kori bustard
+entity.common_ostrich.name=Common ostrich
+entity.european_roe_deer.name=European roe deer
+entity.xenopus_frog.name=Xenopus frog
+
