--- a/src/main/resources/assets/faunanatural/lang/es_es.lang
+++ b/src/main/resources/assets/faunanatural/lang/es_es.lang
@@ -10,3 +10,11 @@ entity.leopard.name=Leopardo africano
 entity.barbary_lion.name=León del Atlas
 entity.grants_gazelle.name=Gacela de Grant
 entity.jack_fish.name=Jurel común
+entity.nautilus.name=Nautilus
+entity.puma.name=Puma
+entity.blue_gnu.name=Ñu azul
+entity.kori_bustard.name=Avutarda kori
+entity.common_ostrich.name=Avestruz común
+entity.european_roe_deer.name=Corzo europeo
+entity.xenopus_frog.name=Rana Xenopus
+
