--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -10,3 +10,10 @@ entity.leopard.name=Léopard Africain
 entity.barbary_lion.name=Lion de l'atlas
 entity.grants_gazelle.name=Gazelle de grant
 entity.jack_fish.name=Carangue
+entity.nautilus.name=Nautile
+entity.puma.name=Puma
+entity.blue_gnu.name=Gnou bleu
+entity.kori_bustard.name=Outarde kori
+entity.common_ostrich.name=Autruche d'Afrique
+entity.european_roe_deer.name=Chevreuil
+entity.xenopus_frog.name=Xenopus
