--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -17,3 +17,7 @@ entity.kori_bustard.name=Outarde kori
 entity.common_ostrich.name=Autruche d'Afrique
 entity.european_roe_deer.name=Chevreuil
 entity.xenopus_frog.name=Xenopus
+
+item.capercaillie_feather.name=Capercaillie feather
+
+itemGroup.natural_fauna_feathers_tab=Natural Fauna: Plumas
