--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -6,8 +6,6 @@ entity.cantabric_capercaillie.name=Grand tétras
 entity.camel.name=Chameau de bactriane
 entity.grey_seal.name=Phoque moine
 entity.little_bustard.name=Outarde canepetière
-entity.leopard.name=Léopard Africain
-entity.barbary_lion.name=Lion de l'atlas
 entity.grants_gazelle.name=Gazelle de grant
 entity.jack_fish.name=Carangue
 entity.nautilus.name=Nautile
@@ -27,5 +25,14 @@ item.feather_kori_bustard.name=Plume de la outarde kori
 item.feather_little_bustard.name=Plume du outarde canepetière
 item.feather_ostrich.name=Plume de la autruche d'Afrique
 item.feather_puffin.name=Plume du macareux moine
+item.dagger_horn.name=Poignard en corne
+item.dagger_tooth.name=Poignard en dent de carnivore
+item.horn.name=Corne
+item.tooth_carnivore.name=Dent de carnivore
+item.fur_cheetah.name=Fourrure de guépard
+item.fur_hyena.name=Fourrure de hyène
+item.hide_gnu.name=Peau de Gnou
+item.hide_gazelle.name=Peau de Gazelle
 
 itemGroup.natural_fauna_feathers_tab=Natural Fauna: Plumes
+itemGroup.natural_fauna_items_tab=Natural Fauna: Objets
