--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -5,9 +5,7 @@ entity.spotted_hyena.name=Spotted hyena
 entity.cantabric_capercaillie.name=Cantabrian capercaillie
 entity.camel.name=Bactrian camel
 entity.grey_seal.name=Grey seal
-entity.little_bustard.name=Little bustard
 entity.grants_gazelle.name=Grant's gazelle
-entity.jack_fish.name=Jack Fish
 entity.nautilus.name=Nautilus
 entity.puma.name=Puma
 entity.blue_gnu.name=Blue gnu
@@ -16,16 +14,21 @@ entity.common_ostrich.name=Common ostrich
 entity.european_roe_deer.name=European roe deer
 entity.xenopus_frog.name=Xenopus frog
 entity.cape_bushbuck.name=Cape bushbuck
-entity.african_cheetah.name=African cheetah
+entity.red_Billed_Tropicbird.name=Red-billed tropicbird
+entity.red_Billed_hornbill.name=Red-billed Hornbill
+entity.turaco.name=Turaco
+entity.saddlebilled_stork.name=Saddle-billed stork
 
 item.feather_capercaillie_male.name=Male capercaillie feather
 item.feather_capercaillie_female.name=Female capercaillie feather
 item.feather_avocet.name=Avocet feather
 item.feather_courser.name=Cream-coloured courser feather
 item.feather_kori_bustard.name=Kori bustard feather
-item.feather_little_bustard.name=Little bustard feather
 item.feather_ostrich.name=Ostrich feather
 item.feather_puffin.name=Puffin feather
+item.feather_tropicbird.name=Red-billed tropicbird feather
+item.feather_redbilledhornbill.name=Red-billed hornbill feather
+item.feather_saddlebilledstork.name=Saddle-billed stork feather
 item.dagger_horn.name=Horn dagger
 item.dagger_tooth.name=Carnivore tooth dagger
 item.horn.name=Horn
