--- a/src/main/resources/assets/faunanatural/lang/es_es.lang
+++ b/src/main/resources/assets/faunanatural/lang/es_es.lang
@@ -5,9 +5,7 @@ entity.spotted_hyena.name=Hiena moteada
 entity.cantabric_capercaillie.name=Urogallo cantábrico
 entity.camel.name=Camello bactriano
 entity.grey_seal.name=Foca gris
-entity.little_bustard.name=Sisón común
 entity.grants_gazelle.name=Gacela de Grant
-entity.jack_fish.name=Jurel común
 entity.nautilus.name=Nautilus
 entity.puma.name=Puma
 entity.blue_gnu.name=Ñu azul
@@ -17,15 +15,21 @@ entity.european_roe_deer.name=Corzo europeo
 entity.xenopus_frog.name=Rana Xenopus
 entity.cape_bushbuck.name=Bushbuck septentrional
 entity.african_cheetah.name=Guepardo africano
+entity.red_Billed_Tropicbird.name=Rabijunco etéreo
+entity.red_Billed_hornbill.name=Toco piquirrojo
+entity.turaco.name=Turaco
+entity.saddlebilled_stork.name=Jabirú africano
 
 item.feather_capercaillie_male.name=Pluma de urogallo macho
 item.feather_capercaillie_female.name=Pluma de urogallo hembra
 item.feather_avocet.name=Pluma de avoceta
 item.feather_courser.name=Pluma de corredor sahariano
 item.feather_kori_bustard.name=Pluma de avutarda kori
-item.feather_little_bustard.name=Pluma de sisón común
 item.feather_ostrich.name=Pluma de avestruz
 item.feather_puffin.name=Pluma de frailecillo atlántico
+item.feather_tropicbird.name=Pluma de rabijunco etéreo
+item.feather_redbilledhornbill.name=Pluma de toco piquirrojo
+item.feather_saddlebilledstork.name=pluma de jabirú africano
 item.dagger_horn.name=Daga de cuerno
 item.dagger_tooth.name=Daga de diente de carnívoro
 item.horn.name=Cuerno
