--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -5,9 +5,7 @@ entity.spotted_hyena.name=Hyène tachetée
 entity.cantabric_capercaillie.name=Grand tétras
 entity.camel.name=Chameau de bactriane
 entity.grey_seal.name=Phoque moine
-entity.little_bustard.name=Outarde canepetière
 entity.grants_gazelle.name=Gazelle de grant
-entity.jack_fish.name=Carangue
 entity.nautilus.name=Nautile
 entity.puma.name=Puma
 entity.blue_gnu.name=Gnou bleu
@@ -17,15 +15,21 @@ entity.european_roe_deer.name=Chevreuil
 entity.xenopus_frog.name=Xenopus
 entity.cape_bushbuck.name=Guib harnaché
 entity.african_cheetah.name=Guépard africain
+entity.red_Billed_Tropicbird.name=Phaéton à bec rouge
+entity.red_Billed_hornbill.name=Calao à bec rouge
+entity.turaco.name=Touraco
+entity.saddlebilled_stork.name=Jabiru d'Afrique
 
 item.feather_capercaillie_male.name=Plume du grand tétras mâle
 item.feather_capercaillie_female.name=Plume du grand tétras femelle
 item.feather_avocet.name=Plume de la avocette
 item.feather_courser.name=Plume du courvite isabelle
 item.feather_kori_bustard.name=Plume de la outarde kori
-item.feather_little_bustard.name=Plume du outarde canepetière
 item.feather_ostrich.name=Plume de la autruche d'Afrique
 item.feather_puffin.name=Plume du macareux moine
+item.feather_tropicbird.name=Plume du phaéton à bec rouge
+item.feather_redbilledhornbill.name=Plume du calao à bec rouge
+item.feather_saddlebilledstork.name=Plume du jabiru d'Afrique
 item.dagger_horn.name=Poignard en corne
 item.dagger_tooth.name=Poignard en dent de carnivore
 item.horn.name=Corne
