--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -17,6 +17,9 @@ entity.red_Billed_Tropicbird.name=Red-billed tropicbird
 entity.red_Billed_hornbill.name=Red-billed Hornbill
 entity.turaco.name=Turaco
 entity.saddlebilled_stork.name=Saddle-billed stork
+entity.peregrine_falcon.name=Peregrine falcon
+entity.estuary_stingray.name=Estuary stingray
+entity.willow_ptarmigan.name=Willow ptarmigan
 
 item.feather_capercaillie_male.name=Male capercaillie feather
 item.feather_capercaillie_female.name=Female capercaillie feather
