--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -13,6 +13,7 @@ entity.common_ostrich.name=Common ostrich
 entity.european_roe_deer.name=European roe deer
 entity.xenopus_frog.name=Xenopus frog
 entity.cape_bushbuck.name=Cape bushbuck
+entity.african_cheetah.name=African cheetah
 entity.red_Billed_Tropicbird.name=Red-billed tropicbird
 entity.red_Billed_hornbill.name=Red-billed Hornbill
 entity.turaco.name=Turaco
@@ -31,6 +32,11 @@ item.feather_puffin.name=Puffin feather
 item.feather_tropicbird.name=Red-billed tropicbird feather
 item.feather_redbilledhornbill.name=Red-billed hornbill feather
 item.feather_saddlebilledstork.name=Saddle-billed stork feather
+item.feather_turaco_violet.name=Violet turaco feather
+item.feather_turaco_redcrested.name=Red-crested turaco feather
+item.feather_turaco_greatblue.name=Great blue turaco feather
+item.feather_falcon.name=Peregrine falcon feather
+item.feather_ptarmigan.name=Willow ptarmigan feather
 item.dagger_horn.name=Horn dagger
 item.dagger_tooth.name=Carnivore tooth dagger
 item.horn.name=Horn
