--- a/src/main/resources/assets/faunanatural/lang/es_es.lang
+++ b/src/main/resources/assets/faunanatural/lang/es_es.lang
@@ -32,6 +32,11 @@ item.feather_puffin.name=Pluma de frailecillo atlántico
 item.feather_tropicbird.name=Pluma de rabijunco etéreo
 item.feather_redbilledhornbill.name=Pluma de toco piquirrojo
 item.feather_saddlebilledstork.name=pluma de jabirú africano
+item.feather_turaco_violet.name=Pluma de turaco violaceo
+item.feather_turaco_redcrested.name=Pluma de turaco crestirrojo
+item.feather_turaco_greatblue.name=Pluma de turaco gigante
+item.feather_falcon.name=Pluma de halcón peregrino
+item.feather_ptarmigan.name=Pluma de lagópodo común
 item.dagger_horn.name=Daga de cuerno
 item.dagger_tooth.name=Daga de diente de carnívoro
 item.horn.name=Cuerno
