--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -32,6 +32,11 @@ item.feather_puffin.name=Plume du macareux moine
 item.feather_tropicbird.name=Plume du phaéton à bec rouge
 item.feather_redbilledhornbill.name=Plume du calao à bec rouge
 item.feather_saddlebilledstork.name=Plume du jabiru d'Afrique
+item.feather_turaco_violet.name=Plume du touraco violet
+item.feather_turaco_redcrested.name=Plume du touraco de Pauline
+item.feather_turaco_greatblue.name=Plume du touraco géant
+item.feather_falcon.name=Plume du faucon pèlerin
+item.feather_ptarmigan.name=Plume du lagopède des saules
 item.dagger_horn.name=Poignard en corne
 item.dagger_tooth.name=Poignard en dent de carnivore
 item.horn.name=Corne
