--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -21,6 +21,7 @@ entity.saddlebilled_stork.name=Jabiru d'Afrique
 entity.peregrine_falcon.name=Faucon pèlerin
 entity.estuary_stingray.name=Dasyatis fluviorum
 entity.willow_ptarmigan.name=Lagopède des saules
+entity.american_paddlefish.name=Polyodon spathula
 
 item.feather_capercaillie_male.name=Plume du grand tétras mâle
 item.feather_capercaillie_female.name=Plume du grand tétras femelle
