--- a/src/main/resources/assets/faunanatural/lang/es_es.lang
+++ b/src/main/resources/assets/faunanatural/lang/es_es.lang
@@ -21,6 +21,7 @@ entity.saddlebilled_stork.name=Jabirú africano
 entity.peregrine_falcon.name=Halcón peregrino
 entity.estuary_stingray.name=Raya de estuario
 entity.willow_ptarmigan.name=Lagopodo común
+entity.american_paddlefish.name=Pez espatula
 
 item.feather_capercaillie_male.name=Pluma de urogallo macho
 item.feather_capercaillie_female.name=Pluma de urogallo hembra
