final changes for zawa 1.5.4 compat
adjusted all bird wing flaps to be in sync.
adding localization for basilisk lizard.
fixed bison dropping carnivore meat.

--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -27,6 +27,7 @@ entity.marmoset.name=Marmoset
 entity.axolotl.name=Axolotl
 entity.american_bison.name=American bison
 entity.barbary_partridge.name=Barbary partridge
+entity.basilisk_lizard.name=Basilisk Lizard
 
 item.feather_capercaillie_male.name=Male capercaillie feather
 item.feather_capercaillie_female.name=Female capercaillie feather
