--- a/src/main/resources/assets/faunanatural/lang/fr_fr.lang
+++ b/src/main/resources/assets/faunanatural/lang/fr_fr.lang
@@ -27,6 +27,7 @@ entity.marmoset.name=Ouistiti pygmée
 entity.axolotl.name=Axolotl
 entity.american_bison.name=Bison d'Amérique
 entity.barbary_partridge.name=Perdrix gambra
+entity.basilisk_lizard.name=Lézard basilisc
 
 item.feather_capercaillie_male.name=Plume du grand tétras mâle
 item.feather_capercaillie_female.name=Plume du grand tétras femelle
