--- a/src/main/resources/assets/faunanatural/lang/it_ita.lang
+++ b/src/main/resources/assets/faunanatural/lang/it_ita.lang
@@ -27,6 +27,7 @@ entity.marmoset.name=Marmosetta
 entity.axolotl.name=Axolotl
 entity.american_bison.name=Bisonte americano
 entity.barbary_partridge.name=Pernice sarda
+entity.basilisk_lizard.name=Lucertola basilisco
 
 item.feather_capercaillie_male.name=Piuma di gallo cedrone maschio
 item.feather_capercaillie_female.name=Piuma di gallo cedrone femmina
