added Common Loon
should be good to go minus crash mentioned last commit

--- a/src/main/resources/assets/faunanatural/lang/en_us.lang
+++ b/src/main/resources/assets/faunanatural/lang/en_us.lang
@@ -28,6 +28,7 @@ entity.axolotl.name=Axolotl
 entity.american_bison.name=American bison
 entity.barbary_partridge.name=Barbary partridge
 entity.basilisk_lizard.name=Basilisk Lizard
+entity.common_loon.name=Common Loon
 
 item.feather_capercaillie_male.name=Male capercaillie feather
 item.feather_capercaillie_female.name=Female capercaillie feather
