--- a/src/main/resources/assets/faunanatural/lang/es_es.lang
+++ b/src/main/resources/assets/faunanatural/lang/es_es.lang
@@ -28,6 +28,7 @@ entity.axolotl.name=Ajolote
 entity.american_bison.name=Bisonte americano
 entity.barbary_partridge.name=Perdíz moruna
 entity.basilisk_lizard.name=Lagarto basilisco
+entity.common_loon.name=Colimbo grande
 
 item.feather_capercaillie_male.name=Pluma de urogallo macho
 item.feather_capercaillie_female.name=Pluma de urogallo hembra
