--- a/src/main/resources/assets/faunanatural/lang/zh_cn.lang
+++ b/src/main/resources/assets/faunanatural/lang/zh_cn.lang
@@ -28,6 +28,7 @@ entity.axolotl.name=蝾螈
 entity.american_bison.name=美洲野牛
 entity.barbary_partridge.name=山鹑
 entity.basilisk_lizard.name=蛇怪蜥蜴
+entity.common_loon.name=普通潜鸟
 
 item.feather_capercaillie_male.name=雄性松鸡羽毛
 item.feather_capercaillie_female.name=雌性松鸡羽毛
